--- a/IFSOFT.Dal/IFSOFT.Dal.csproj
+++ b/IFSOFT.Dal/IFSOFT.Dal.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="clsAdminUser.cs" />
     <Compile Include="clsNews.cs" />
+    <Compile Include="clsProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
