--- a/IFSOFT.Dal/IFSOFT.Dal.csproj
+++ b/IFSOFT.Dal/IFSOFT.Dal.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,7 @@
     <Compile Include="clsAdminUser.cs" />
     <Compile Include="clsNews.cs" />
     <Compile Include="clsProduct.cs" />
+    <Compile Include="clsProductCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
